# partner_auth_service

./: .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
scripts/: build-docker.sh
src/: errors.rs  main.rs
src/cli/: codes.rs  keys.rs  mod.rs
src/server/: api.rs  client.rs  error.rs  mod.rs  server.rs
