[package]
name = "yat-partner"
version = "0.1.0"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
tari_crypto = { version = "0.9.0" }
rand = "0.7.2"
digest = "0.8.1"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = "2"
anyhow = "1.0"
