[package]
name = "yat-partner"
version = "0.1.0"
authors = ["Krakaw <41575888+Krakaw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11"
actix-web = { version = "3", features = ["openssl"] }
anyhow = "1.0"
clap = "2"
digest = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.8"
futures = "0.3"
http = "0.2"
log = "0.4"
rand = "0.7.2"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
tari_crypto = { version = "0.9.0" }
thiserror = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
